Fixed page-container to use 100% height w/ overflow to handle longer section lengths.

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,7 +98,9 @@ body {
  * ====================================================== */
 .page-container {
     width: 100%;
-    height: fill;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
     
 	background-color: rgba(32, 32, 32, 0.5);
     
